--- a/fjy.html
+++ b/fjy.html
@@ -91,7 +91,7 @@
     <h1>谁是最牛逼的人？</h1>
 
     <div class="photo-container">
-        <img src="images/myphoto.jpg" alt="我的照片" class="photo" id="myPhoto">
+        <img src="3.jpg" alt="我的照片" class="photo" id="myPhoto">
     </div>
 
     <!-- Modal -->
