--- a/fjy.html
+++ b/fjy.html
@@ -171,7 +171,7 @@
                     answerDiv.textContent = "仙品！！！";
                     answerDiv.style.color = "green";
                 } else {
-                    answerDiv.textContent = "太厕了！！！讨厌你！！！";
+                    answerDiv.textContent = "太厕了！！！再给你一次机会";
                     answerDiv.style.color = "red";
                 }
             } else {
