--- a/fjy.html
+++ b/fjy.html
@@ -221,7 +221,7 @@
             const screenWidth = window.innerWidth;
             const screenHeight = window.innerHeight;
 
-            const message = "讨厌你";
+            const message = "讨厌你！！！";
             const messageWidth = 100; // "讨厌你"的宽度，假设每个文字宽度为100px
 
             // 计算每行的“讨厌你”个数
