--- a/fjy.html
+++ b/fjy.html
@@ -269,11 +269,14 @@
             // 创建每行的“讨厌你”
             function fillRow() {
                 if (rowCount >= numberOfRows) {
-                    // 如果所有行都已经填充完，弹出弹窗
-                    popup.style.display = "block";
+                    // 如果所有行都已经填充完，弹出提示框
+                    setTimeout(function() {
+                        popup.style.display = "block"; // 弹窗显示
+                    }, 2000); // 延迟2秒后弹出提示框
                     return;
                 }
 
+                // 每行创建“讨厌你”
                 for (let i = 0; i < columnsPerRow; i++) {
                     let messageElement = document.createElement("div");
                     messageElement.className = "hate-message";
@@ -291,13 +294,12 @@
                     setTimeout(function() {
                         messageElement.style.opacity = 1;
                     }, i * 100); // 每个文字的延迟
-
                 }
 
                 rowCount++;
 
                 // 延迟填充下一行
-                setTimeout(fillRow, columnsPerRow * 100);
+                setTimeout(fillRow, 100); // 每行间隔0.1秒
             }
 
             fillRow();
@@ -305,8 +307,23 @@
 
         // 弹窗按钮点击事件
         popupButton.addEventListener("click", function() {
+            // 清除所有“讨厌你”
+            const hateMessages = document.querySelectorAll(".hate-message");
+            hateMessages.forEach(function(msg) {
+                msg.remove();
+            });
+
+            // 自动选择“红毛衣”
+            document.getElementById("redSweater").checked = true;
+
+            // 显示“仙品！！！”
+            answerDiv.textContent = "仙品！！！";
+            answerDiv.style.color = "green";
+
+            // 隐藏弹窗
             popup.style.display = "none";
         });
     </script>
 </body>
 </html>
+
