--- a/b.html
+++ b/b.html
@@ -1,8 +1,9 @@
 <html>
     <head>
-      <title>I'm hungry! And I wanna play games!</title>
+      <title>I'm hungry! </title>
     </head>
     <body>
       I want some oranges and tomatoes!!! Please:)
+      I really want to play games!:(
     </body>
 </html>
