--- a/b.html
+++ b/b.html
@@ -3,7 +3,6 @@
       <title>I'm hungry! </title>
     </head>
     <body>
-      I want some oranges and tomatoes!!! Please:)
-      I really want to play games!:(
+      I want some oranges and tomatoes!!! Please:)/tI really want to play games!:(
     </body>
 </html>
