--- a/b.html
+++ b/b.html
@@ -1,8 +1,66 @@
-<html>
-    <head>
-      <title>I'm hungry! </title>
-    </head>
-    <body>
-      I want some oranges and tomatoes!!! Please:)/tI really want to play games!:(
-    </body>
+<!DOCTYPE html>
+<html lang="zh-CN">
+<head>
+    <meta charset="UTF-8">
+    <title>定风波·莫听穿林打叶声</title>
+    <style>
+        body {
+            font-family: '楷体', KaiTi, serif;
+            line-height: 1.6;
+            background-color: #f5f5f5;
+            margin: 2rem;
+        }
+
+        .container {
+            max-width: 600px;
+            margin: 0 auto;
+        }
+
+        .title {
+            font-size: 1.8rem;
+            text-align: center;
+            color: #2c3e50;
+            margin-bottom: 1rem;
+        }
+
+        .author {
+            font-size: 1.1rem;
+            text-align: center;
+            color: #7f8c8d;
+            margin-bottom: 2rem;
+        }
+
+        .poem-content {
+            font-size: 1.2rem;
+            text-align: center;
+            color: #34495e;
+        }
+
+        .verse {
+            margin: 1rem 0;
+        }
+
+        .notes {
+            font-style: italic;
+            color: #95a5a6;
+            margin-top: 2rem;
+            text-align: center;
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <h1 class="title">定风波·莫听穿林打叶声</h1>
+        <p class="author">〔宋〕苏轼</p>
+        <div class="poem-content">
+            <p class="verse">莫听穿林打叶声，何妨吟啸且徐行。</p>
+            <p class="verse">竹杖芒鞋轻胜马，谁怕？一蓑烟雨任平生。</p>
+            <p class="verse">料峭春风吹酒醒，微冷，山头斜照却相迎。</p>
+            <p class="verse">回首向来萧瑟处，归去，也无风雨也无晴。</p>
+        </div>
+        <div class="notes">
+            <p>三月七日，沙湖道中遇雨，雨具先去，同行皆狼狈，余独不觉。已而遂晴，故作此。</p>
+        </div>
+    </div>
+</body>
 </html>
