--- a/b.html
+++ b/b.html
@@ -2,12 +2,11 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
-    <title>定风波·莫听穿林打叶声（带拼音）</title>
+    <title>定风波·莫听穿林打叶声（完整拼音版）</title>
     <style>
-        /* 在原样式基础上增加拼音相关样式 */
         body {
             font-family: '楷体', KaiTi, serif;
-            line-height: 2; /* 增加行高容纳拼音 */
+            line-height: 2;
             background-color: #f5f5f5;
             margin: 2rem;
         }
@@ -15,37 +14,62 @@
         rt {
             font-size: 0.6em;
             color: #666;
-            font-family: Arial, sans-serif; /* 拼音用无衬线字体更清晰 */
+            font-family: Arial, sans-serif;
+            padding: 0 0.1em;
         }
 
-        .verse {
-            margin: 1.5rem 0;
-        }
-
-        /* 其他保持原有样式不变 */
-        .container { max-width: 600px; margin: 0 auto; }
+        .container { max-width: 680px; margin: 0 auto; }
         .title { font-size: 1.8rem; text-align: center; color: #2c3e50; }
         .author { font-size: 1.1rem; text-align: center; color: #7f8c8d; }
         .poem-content { font-size: 1.2rem; text-align: center; color: #34495e; }
+        .verse { margin: 1.5rem 0; }
         .notes { font-style: italic; color: #95a5a6; margin-top: 2rem; text-align: center; }
     </style>
 </head>
 <body>
     <div class="container">
-        <h1 class="title">定<ruby>风<rt>fēng</rt></ruby><ruby>波<rt>bō</rt></ruby></h1>
+        <h1 class="title"><ruby>定<rt>dìng</rt></ruby><ruby>风<rt>fēng</rt></ruby><ruby>波<rt>bō</rt></ruby></h1>
         <p class="author">〔<ruby>宋<rt>Sòng</rt></ruby>〕<ruby>苏<rt>Sū</rt></ruby><ruby>轼<rt>shì</rt></ruby></p>
         <div class="poem-content">
+            <!-- 第一段 -->
             <p class="verse">
                 <ruby>莫<rt>mò</rt></ruby><ruby>听<rt>tīng</rt></ruby><ruby>穿<rt>chuān</rt></ruby><ruby>林<rt>lín</rt></ruby><ruby>打<rt>dǎ</rt></ruby><ruby>叶<rt>yè</rt></ruby><ruby>声<rt>shēng</rt></ruby>，
                 <ruby>何<rt>hé</rt></ruby><ruby>妨<rt>fáng</rt></ruby><ruby>吟<rt>yín</rt></ruby><ruby>啸<rt>xiào</rt></ruby><ruby>且<rt>qiě</rt></ruby><ruby>徐<rt>xú</rt></ruby><ruby>行<rt>xíng</rt></ruby>。
             </p>
-            <!-- 剩余诗句按相同格式添加 -->
-            <p class="verse">竹杖芒鞋轻胜马，谁怕？一蓑烟雨任平生。</p>
-            <p class="verse">料峭春风吹酒醒，微冷，山头斜照却相迎。</p>
-            <p class="verse">回首向来萧瑟处，归去，也无风雨也无晴。</p>
+            
+            <!-- 第二段 -->
+            <p class="verse">
+                <ruby>竹<rt>zhú</rt></ruby><ruby>杖<rt>zhàng</rt></ruby><ruby>芒<rt>máng</rt></ruby><ruby>鞋<rt>xié</rt></ruby><ruby>轻<rt>qīng</rt></ruby><ruby>胜<rt>shèng</rt></ruby><ruby>马<rt>mǎ</rt></ruby>，
+                <ruby>谁<rt>shuí</rt></ruby><ruby>怕<rt>pà</rt></ruby>？
+                <ruby>一<rt>yī</rt></ruby><ruby>蓑<rt>suō</rt></ruby><ruby>烟<rt>yān</rt></ruby><ruby>雨<rt>yǔ</rt></ruby><ruby>任<rt>rèn</rt></ruby><ruby>平<rt>píng</rt></ruby><ruby>生<rt>shēng</rt></ruby>。
+            </p>
+
+            <!-- 第三段 -->
+            <p class="verse">
+                <ruby>料<rt>liào</rt></ruby><ruby>峭<rt>qiào</rt></ruby><ruby>春<rt>chūn</rt></ruby><ruby>风<rt>fēng</rt></ruby><ruby>吹<rt>chuī</rt></ruby><ruby>酒<rt>jiǔ</rt></ruby><ruby>醒<rt>xǐng</rt></ruby>，
+                <ruby>微<rt>wēi</rt></ruby><ruby>冷<rt>lěng</rt></ruby>，
+                <ruby>山<rt>shān</rt></ruby><ruby>头<rt>tóu</rt></ruby><ruby>斜<rt>xié</rt></ruby><ruby>照<rt>zhào</rt></ruby><ruby>却<rt>què</rt></ruby><ruby>相<rt>xiāng</rt></ruby><ruby>迎<rt>yíng</rt></ruby>。
+            </p>
+
+            <!-- 第四段 -->
+            <p class="verse">
+                <ruby>回<rt>huí</rt></ruby><ruby>首<rt>shǒu</rt></ruby><ruby>向<rt>xiàng</rt></ruby><ruby>来<rt>lái</rt></ruby><ruby>萧<rt>xiāo</rt></ruby><ruby>瑟<rt>sè</rt></ruby><ruby>处<rt>chù</rt></ruby>，
+                <ruby>归<rt>guī</rt></ruby><ruby>去<rt>qù</rt></ruby>，
+                <ruby>也<rt>yě</rt></ruby><ruby>无<rt>wú</rt></ruby><ruby>风<rt>fēng</rt></ruby><ruby>雨<rt>yǔ</rt></ruby><ruby>也<rt>yě</rt></ruby><ruby>无<rt>wú</rt></ruby><ruby>晴<rt>qíng</rt></ruby>。
+            </p>
         </div>
+
+        <!-- 诗序 -->
         <div class="notes">
-            <p>三月七日，沙湖道中遇雨，雨具先去，同行皆狼狈，余独不觉。已而遂晴，故作此。</p>
+            <p>
+                <ruby>三<rt>sān</rt></ruby><ruby>月<rt>yuè</rt></ruby><ruby>七<rt>qī</rt></ruby><ruby>日<rt>rì</rt></ruby>，
+                <ruby>沙<rt>shā</rt></ruby><ruby>湖<rt>hú</rt></ruby><ruby>道<rt>dào</rt></ruby><ruby>中<rt>zhōng</rt></ruby><ruby>遇<rt>yù</rt></ruby><ruby>雨<rt>yǔ</rt></ruby>，
+                <ruby>雨<rt>yǔ</rt></ruby><ruby>具<rt>jù</rt></ruby><ruby>先<rt>xiān</rt></ruby><ruby>去<rt>qù</rt></ruby>，
+                <ruby>同<rt>tóng</rt></ruby><ruby>行<rt>xíng</rt></ruby><ruby>皆<rt>jiē</rt></ruby><ruby>狼<rt>láng</rt></ruby><ruby>狈<rt>bèi</rt></ruby>，
+                <ruby>余<rt>yú</rt></ruby><ruby>独<rt>dú</rt></ruby><ruby>不<rt>bù</rt></ruby><ruby>觉<rt>jué</rt></ruby>。
+                <ruby>已<rt>yǐ</rt></ruby><ruby>而<rt>ér</rt></ruby><ruby>遂<rt>suì</rt></ruby><ruby>晴<rt>qíng</rt></ruby>，
+                <ruby>故<rt>gù</rt></ruby><ruby>作<rt>zuò</rt></ruby><ruby>此<rt>cǐ</rt></ruby>。
+            </p>
         </div>
     </div>
 </body>
