--- a/b.html
+++ b/b.html
@@ -69,6 +69,7 @@
                 <ruby>余<rt>yú</rt></ruby><ruby>独<rt>dú</rt></ruby><ruby>不<rt>bù</rt></ruby><ruby>觉<rt>jué</rt></ruby>。
                 <ruby>已<rt>yǐ</rt></ruby><ruby>而<rt>ér</rt></ruby><ruby>遂<rt>suì</rt></ruby><ruby>晴<rt>qíng</rt></ruby>，
                 <ruby>故<rt>gù</rt></ruby><ruby>作<rt>zuò</rt></ruby><ruby>此<rt>cǐ</rt></ruby>。
+                <img src="定风波.jpg" width="1600px" height="900px"
             </p>
         </div>
     </div>
